--- a/src/main/resources/templates/club/show_club_view.html
+++ b/src/main/resources/templates/club/show_club_view.html
@@ -1,27 +1,23 @@
 <!DOCTYPE html>
-<!--
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
--->
-<html>
+
+<html 
+    xmlns:th="http://www.thymeleaf.org" >
     <head>
-        <title>Footer</title>
+        <title>Club</title>
         <meta charset="UTF-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
         <link rel="stylesheet" th:href="@{/css/style.css}"
               href="../../css/style.css" />
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
-
     </head>
     <body>
-        <div th:fragment="footer"></div>
-        <footer>
-            <div class="text-center">
-                <p class="text-muted">&copy; 2016 K&amp;K Development</p>
-            </div>
-        </footer>
+        <div class="container">
+            <div th:replace="header :: header"></div>
+            <div>TODO write content</div>
+        </div>
+        <div th:replace="footer :: footer"></div>
     </body>
 </html>
