--- a/src/main/resources/templates/footer.html
+++ b/src/main/resources/templates/footer.html
@@ -6,7 +6,7 @@ and open the template in the editor.
 -->
 <html>
     <head>
-        <title>asd</title>
+        <title>Footer</title>
         <meta charset="UTF-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
@@ -17,10 +17,11 @@ and open the template in the editor.
 
     </head>
     <body>
-        <div th:fragment="footer" class="text-center">
-            <br/><br/>
-            <p>All rights reserved</p>
-        </div>
+        <div th:fragment="footer"></div>
+        <footer>
+            <div class="text-center">
+                <p class="text-muted">&copy; 2016 K&amp;K Development</p>
+            </div>
+        </footer>
     </body>
-
 </html>
