--- a/src/main/resources/templates/club/show_club_view.html
+++ b/src/main/resources/templates/club/show_club_view.html
@@ -16,8 +16,7 @@
     <body>
         <div class="container">
             <div th:replace="header :: header"></div>
-            <div>TODO write content</div>
+            <p th:text="${club.nazwa}"/>
         </div>
-        <div th:replace="footer :: footer"></div>
     </body>
 </html>
