Try to make a buildings view

--- a/src/main/resources/templates/building/show_building_view.html
+++ b/src/main/resources/templates/building/show_building_view.html
@@ -43,7 +43,7 @@
 
 
                             <p th:text="${building.miejscowosc}"/>
-                             <p th:text="${building.kod_pocztowy}"/>
+                             <p th:text="${building.kodPocztowy}"/>
                               <p th:text="${building.ulicanumer}"/>
                         </div>
                     </div>
