Try to make a buildings view

--- a/src/main/resources/templates/building/show_building_view.html
+++ b/src/main/resources/templates/building/show_building_view.html
@@ -20,31 +20,40 @@
                 <div class="col-md-3"></div>
                 <div class="col-md-6">
                     <div th:unless="${#lists.isEmpty(buildings)}">
-                        <div class='floating-box'  th:each="building : ${buildings}" >
-                            <h1 align="center">Buildings</h1>
-
+                        <h1 align="center">Buildings</h1>
+                        <p align="center"><img src="https://cdn4.iconfinder.com/data/icons/miu/24/house-home-real_estate-property-glyph-128.png"/></p>
+                        <div class='floating-box-building'  th:each="building : ${buildings}" >
                             <div th:unless="${#lists.isEmpty(arenaList)}" th:each="arena: ${arenaList}">
-                                <div th:unless="${arena.idBudynek}!=${building.idbudynek}">
-                                    <h2 align="center">Club arena</h2>
-                                    <p th:text="${arena.nazwa}"/>
-                                    <p th:text="${arena.iloscMiejsc}"/>
-                                    <p th:text="${arena.dyscyplina}"/>
+                                <div  th:unless="${arena.idBuilding}!=${building.idbuilding}">
+                                    <p><b>Club arena</b></p>
+                                    "/club/{id}/buildings"
+                                    <a th:href="@{/club/__${building.idClub.idCub}__/buildings/edit/__${building.idbuilding}__}"><span style="margin-left: 10px" class="glyphicon glyphicon-pencil"></span> </a>
+                                    <a th:href="@{/club/__${building.idClub.idClub}__/buildings/remove/__${building.idbuilding}__}"><span style="margin-left: 30px" class="glyphicon glyphicon-remove"></span> </a> 
+                                    <p th:text="'Name: ' + ${arena.name}"/>
+                                    <p th:text="'Capacity: '+${arena.capacity}"/>
+                                    <p th:text="'Sport discipine: '+${arena.discipline}"/>
                                 </div>
                             </div>
-                            <div th:unless="${#lists.isEmpty(buildingAdminList)}">
-                                <h2 align="center">Club administration</h2>
 
 
+                            <div th:unless="${#lists.isEmpty(buildingAdminList)}" th:each="admin: ${buildingAdminList}">
+                                <div  th:unless="${admin.idBuilding}!=${building.idbuilding}">
+                                    <p><b>Club administration</b></p>
+
+                                </div>
                             </div>
-                            <div th:unless="${#lists.isEmpty(trainingObjectList)}">
-                                <h2 align="center"> Trainig Objects</h2>
-
+                            <div th:unless="${#lists.isEmpty(trainingObjectList)}" th:each="tbuilding:${trainingObjectList}">
+                                <div  th:unless="${tbuilding.idBuilding}!=${building.idbuilding}">
+                                    <p><b>Trainig Objects</b></p>
+                                    <p th:text="${tbuilding.dyscyplina}"/>
+                                </div>
                             </div>
 
-
-                            <p th:text="${building.miejscowosc}"/>
-                             <p th:text="${building.kodPocztowy}"/>
-                              <p th:text="${building.ulicanumer}"/>
+                            <p><b>Address</b></p>
+                            <p th:text="'City: '+${building.city}"/>
+                            <p th:text="'Post code: '+${building.postcode}"/>
+                            <p th:text="'Street: '+${building.street}"/>
+                            <br/><br/>
                         </div>
                     </div>
                 </div>
