--- a/src/main/resources/templates/building/show_building_view.html
+++ b/src/main/resources/templates/building/show_building_view.html
@@ -3,7 +3,7 @@
 <html 
     xmlns:th="http://www.thymeleaf.org" >
     <head>
-        <title>Club</title>
+        <title>Buildings</title>
         <meta charset="UTF-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
@@ -22,13 +22,18 @@
                     <div th:unless="${#lists.isEmpty(buildings)}">
                         <h1 align="center">Buildings</h1>
                         <p align="center"><img src="https://cdn4.iconfinder.com/data/icons/miu/24/house-home-real_estate-property-glyph-128.png"/></p>
+                        <div th:if="${#authorization.expression('isAuthenticated()')}">
+                            <div align="center"> <a th:href="@{/club/__${buildings[0].idKlub.idKlub}__/buildings/create}">Add new building<span style="margin-left: 10px" class="glyphicon glyphicon-plus"></span> </a> </div>
+                        </div>
                         <div class='floating-box-building'  th:each="building : ${buildings}" >
+
                             <div th:unless="${#lists.isEmpty(arenaList)}" th:each="arena: ${arenaList}">
                                 <div  th:unless="${arena.idBudynek}!=${building.idbudynek}">
                                     <p><b>Club arena</b></p>
-                                    "/club/{id}/buildings"
-                                    <a th:href="@{/club/__${building.idKlub.idKlub}__/buildings/edit/__${building.idbudynek}__}"><span style="margin-left: 10px" class="glyphicon glyphicon-pencil"></span> </a>
-                                    <a th:href="@{/club/__${building.idKlub.idKlub}__/buildings/remove/__${building.idbudynek}__}"><span style="margin-left: 30px" class="glyphicon glyphicon-remove"></span> </a> 
+                                    <div th:if="${#authorization.expression('isAuthenticated()')}">
+                                        <a th:href="@{/club/__${building.idKlub.idKlub}__/buildings/edit/__${building.idbudynek}__}"><span style="margin-left: 10px" class="glyphicon glyphicon-pencil"></span> </a>
+                                        <a th:href="@{/club/__${building.idKlub.idKlub}__/buildings/remove/__${building.idbudynek}__}"><span style="margin-left: 30px" class="glyphicon glyphicon-remove"></span> </a> 
+                                    </div>
                                     <p th:text="'Name: ' + ${arena.nazwa}"/>
                                     <p th:text="'Capacity: '+${arena.iloscMiejsc}"/>
                                     <p th:text="'Sport discipine: '+${arena.dyscyplina}"/>
@@ -39,13 +44,22 @@
                             <div th:unless="${#lists.isEmpty(buildingAdminList)}" th:each="admin: ${buildingAdminList}">
                                 <div  th:unless="${admin.idBudynek}!=${building.idbudynek}">
                                     <p><b>Club administration</b></p>
-
+                                    <div th:if="${#authorization.expression('isAuthenticated()')}">
+                                        <a th:href="@{/club/__${building.idKlub.idKlub}__/buildings/edit/__${building.idbudynek}__}"><span style="margin-left: 10px" class="glyphicon glyphicon-pencil"></span> </a>
+                                        <a th:href="@{/club/__${building.idKlub.idKlub}__/buildings/remove/__${building.idbudynek}__}"><span style="margin-left: 30px" class="glyphicon glyphicon-remove"></span> </a>                         
+                                    </div>
                                 </div>
                             </div>
                             <div th:unless="${#lists.isEmpty(trainingObjectList)}" th:each="tbuilding:${trainingObjectList}">
                                 <div  th:unless="${tbuilding.idBudynek}!=${building.idbudynek}">
-                                    <p><b>Trainig Objects</b></p>
-                                    <p th:text="${tbuilding.dyscyplina}"/>
+
+                                    <p><b>Trainig Object</b></p>
+                                    <div th:if="${#authorization.expression('isAuthenticated()')}">
+                                        <a th:href="@{/club/__${building.idKlub.idKlub}__/buildings/edit/__${building.idbudynek}__}"><span style="margin-left: 10px" class="glyphicon glyphicon-pencil"></span> </a>
+                                        <a th:href="@{/club/__${building.idKlub.idKlub}__/buildings/remove/__${building.idbudynek}__}"><span style="margin-left: 30px" class="glyphicon glyphicon-remove"></span> </a> 
+                                    </div>
+                                    <p th:text="'Sport discipine: '+${tbuilding.dyscyplina}"/>
+
                                 </div>
                             </div>
 
