--- a/src/main/resources/templates/building/create_building_view.html
+++ b/src/main/resources/templates/building/create_building_view.html
@@ -22,11 +22,11 @@
                 <div class="col-md-6">
                     <h1 align="center">Create building</h1>
                     <form action="">
-                        <label th:text="Arena"/>
+                        <p th:text="Arena"/>
                         <input type="radio" name="type" onclick="choose()" id="arenaRadio" />
-                        <label th:text="Admin building"/>
+                        <p th:text="Adminbuilding"/>
                         <input type="radio" name="type" onclick="choose()" id="adminRadio" />
-                        <label th:text="Training Object"/>
+                        <p th:text="TrainingObject"/>
                         <input type="radio" name="type" onclick="choose()" id="objectTrainingRadio" />
                         <script>
 
