--- a/src/main/resources/templates/building/create_building_view.html
+++ b/src/main/resources/templates/building/create_building_view.html
@@ -22,11 +22,11 @@
                 <div class="col-md-6">
                     <h1 align="center">Create building</h1>
                     <form action="">
-                        <p th:text="Arena"/>
+                        <Label th:text="'Arena:'"/>
                         <input type="radio" name="type" onclick="choose()" id="arenaRadio" />
-                        <p th:text="Adminbuilding"/>
+                        <Label th:text="'Admin building:'"/>
                         <input type="radio" name="type" onclick="choose()" id="adminRadio" />
-                        <p th:text="TrainingObject"/>
+                        <Label th:text="'Training Object:'"/>
                         <input type="radio" name="type" onclick="choose()" id="objectTrainingRadio" />
                         <script>
 
@@ -49,29 +49,29 @@
                     <form action="#" method="post" th:action="@{/club/__${Club}__/buildings/create/}" th:object="${buildingForm}">
                         <div class="form-group">
                             <label>Building Addres</label> 
-                            <input type="text" th:field="*{city}" class="form-control" placeholder="Enter new city"/>
+                            <input type="text" th:field="*{city}" class="form-control" placeholder="Enter city"/>
                         </div>
                         <div class="form-group">
-                            <input type="text" th:field="*{postcode}" class="form-control" placeholder="Enter new post code"/>
+                            <input type="text" th:field="*{postcode}" class="form-control" placeholder="Enter post code"/>
                         </div>
                         <div class="form-group">
-                            <input type="text" th:field="*{street}" class="form-control" placeholder="Enter new street and number"/>
+                            <input type="text" th:field="*{street}" class="form-control" placeholder="Enter street number"/>
                         </div>
                         <div id="trainingObject" >
 
                             <div class="form-group" >
                                 <label>Discipline</label> 
-                                <input type="text" th:field="*{discipline}" class="form-control" placeholder="Enter new discipline"/>
+                                <input type="text" th:field="*{discipline}" class="form-control" placeholder="Enter discipline"/>
                             </div>
                         </div>
                         <div id="Arena">
                             <div class="form-group" >
                                 <label>Stadion name</label> 
-                                <input type="text" th:field="*{name}" class="form-control" placeholder="Enter new stadion name"/>
+                                <input type="text" th:field="*{name}" class="form-control" placeholder="Enter stadion name"/>
                             </div>
                             <div class="form-group" >
                                 <label>Stadion capacity</label> 
-                                <input type="text" th:field="*{capacity}" class="form-control" placeholder="Enter new capacity"/>
+                                <input type="text" th:field="*{capacity}" class="form-control" placeholder="Enter capacity"/>
                             </div>
                         </div>
 
