--- a/src/main/resources/templates/section/show_section_view.html
+++ b/src/main/resources/templates/section/show_section_view.html
@@ -32,7 +32,7 @@
                             <br/>
                             <label th:text="'Sex: '+${section.plec}"/>
                             <br/>
-                            <a th:href="@{/club/__${Club}__/sections/}">
+                            <a th:href="@{/club/__${Club}__/sections/__${section.idSekcja}__/teams/}">
                                Show teams
                             </a>
                             <div th:if="${#authorization.expression('isAuthenticated()')}">
