team half crud :)

--- a/src/main/resources/templates/team/show_team_view.html
+++ b/src/main/resources/templates/team/show_team_view.html
@@ -35,9 +35,9 @@
                                 <br/>
                                 Show team statistics
                             </a>
-                            <a th:href="@{/club/__${Club}__/sections/__${idSection}__/teams/}">
+                            <a th:href="@{/club/__${Club}__/sections/__${idSection}__/teams/__${team.idDruzyna}__/players/}">
                                 <br/>
-                                Show team members
+                                Show team players
                             </a>
                             <a th:href="@{/club/__${Club}__/sections/__${idSection}__/teams/}">
                                 <br/>
