--- a/src/main/resources/templates/team/create_team_view.html
+++ b/src/main/resources/templates/team/create_team_view.html
@@ -1,7 +1,7 @@
 <html 
     xmlns:th="http://www.thymeleaf.org" >
     <head>
-        <title>Create Section</title>
+        <title>Create Team</title>
         <meta charset="UTF-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
@@ -19,7 +19,7 @@
             <div class="row">
                 <div class="col-md-3"></div>
                 <div class="col-md-6">
-                    <h1 align="center">Create section</h1>
+                    <h1 align="center">Create team</h1>
                     <form action="#" method="post" th:action="@{/club/__${Club}__/sections/__${Section}__/teams/create/}" th:object="${teamForm}">
                         <div class="form-group">
                             <label>Team name</label> 
