--- a/src/main/resources/templates/player/show_concreteplayer_view.html
+++ b/src/main/resources/templates/player/show_concreteplayer_view.html
@@ -17,28 +17,31 @@
             <div th:replace="header :: header"></div>
             <div class="row">
                 <div class="col-md-1"></div>
-                <div class="col-md-9">
-                    <h1 align="center">Players:</h1>
+                <div class="col-md-10">
+                    <h1 align="center">Player:</h1>
+                    <p align="center"><img src="https://cdn4.iconfinder.com/data/icons/sports-vol-3/48/122-128.png"/></p>
 
-                    <div align="center" class="panel panel-default">
-                        <div class="panel-heading" th:text="'Player:'+${Player.Imie}+' '+ ${Player.Nazwisko}"></div>
-                        <div class="panel-body"><span th:text="' Player birthdate: '+${Player.dataUrodzenia} "/>
-                            <span th:text="' Player height: '+${Player.wzrost} "/>
-                            <span th:text="' Player weight: '+${Player.waga} "/>
+
+                    <div align="left" class="panel panel-default">
+                        <div class="panel-heading" >  <b><span th:text="'Player:'+${Player.Imie}+' '+ ${Player.Nazwisko}"/> </b></div>
+                        <div class="panel-body">
+                            <div th:text="' Player birthdate: '+${Player.dataUrodzenia} "/>
+                            <div th:text="' Player height: '+${Player.wzrost} "/>
+                            <div th:text="' Player weight: '+${Player.waga} "/>
                         </div>
                     </div>
                     <div th:unless="${#lists.isEmpty(statisticsList)}">
                         <ul class="list-group">
                             <div  th:each="statistic : ${statisticsList}" >                             
                                 <li class="list-group-item">
-                                    
-                                    <span th:text="' Statistics for season'+${statistic.sezon.rok} "/>
+
+                                    <b><span th:text="' Statistics for season'+${statistic.sezon.rok} "/></b>
                                     <br/>
-                                    <span th:text="' Player goals: '+${statistic.strzeloneBramki} "/>
-                                    <span th:text="' Player lost goals: '+${statistic.straconeBramki} "/>
-                                    <span th:text="' Player yellow cards: '+${statistic.zolteKartki} "/>
-                                    <span th:text="' Player red cards: '+${statistic.czerwoneKartki} "/>
-                                     <span th:text="' Player fauls commited '+${statistic.czerwoneKartki} "/>
+                                    <div th:text="' Player goals: '+${statistic.strzeloneBramki} "/>
+                                    <div th:text="' Player lost goals: '+${statistic.straconeBramki} "/>
+                                    <div th:text="' Player yellow cards: '+${statistic.zolteKartki} "/>
+                                    <div th:text="' Player red cards: '+${statistic.czerwoneKartki} "/>
+                                    <div th:text="' Player fauls commited '+${statistic.czerwoneKartki} "/>
                                     <div th:if="${#authorization.expression('isAuthenticated()')}">
                                         <a th:href="@{/club/__${Club}__/sections/__${idSection}__/teams/__${Team}__/players/__${Player.idZawodnik}__/s/}"><span style="margin-left: 10px" class="glyphicon glyphicon-pencil"></span> </a>
                                         <a th:href="@{/club/__${Club}__/sections/__${idSection}__/teams/__${Team}__/players/remove/__${Player.idZawodnik}__}"><span style="margin-left: 30px" class="glyphicon glyphicon-remove"></span> </a> 
