--- a/src/main/resources/templates/league/show_concrete_league_view.html
+++ b/src/main/resources/templates/league/show_concrete_league_view.html
@@ -25,13 +25,17 @@
                     <br/>
                     <br/>
 
+                    <h3>Teams in league: </h3>
                     <div th:unless="${#lists.isEmpty(teamList)}">
                         <ul class="list-group">
                             <div th:each="team : ${teamList}" >
                                 <li class="list-group-item">
-                                    <a th:href="@{/club/__${team.idSekcja.idKlub.idKlub}__/sections/__${team.idSekcja.idSekcja}__/teams/}"> 
-                                        <p th:text="${team.nazwa}"/>
-                                    </a>
+                                    <a th:text="${team.nazwa}"/>
+                                    <div align="right" >
+                                        <a th:href="@{/leagues/show/__${league.idLiga}__}"><span style="margin-left: 10px" class="glyphicon glyphicon-stats"></span> </a>
+                                        <a th:href="@{/club/__${team.idSekcja.idKlub.idKlub}__/sections/__${team.idSekcja.idSekcja}__/teams/__${team.idDruzyna}__/players/}"><img style="margin-left: 10px" src="https://cdn4.iconfinder.com/data/icons/sports-vol-3/48/122-20.png"/></a> 
+                                        <a th:href="@{/leagues/show/__${league.idLiga}__}"><img style="margin-left: 10px" src="https://cdn3.iconfinder.com/data/icons/general-icons-set-1/100/65_member-20.png"/> </a> 
+                                    </div>
                                 </li>
                             </div>
                         </ul>
