--- a/src/main/resources/templates/team/create_team_view.html
+++ b/src/main/resources/templates/team/create_team_view.html
@@ -25,6 +25,16 @@
                             <label>Team name</label> 
                             <input type="text" th:field="*{name}" class="form-control" placeholder="Enter name"/>
                         </div>
+                        <div class="form-group">
+                            <label for="sel1">League: </label>
+                            <select class="form-control" th:field="*{league}" id="sel1">
+                                <div th:unless="${#lists.isEmpty(leagueList)}">
+                                    <div th:each="league : ${leagueList}" >
+                                        <option th:text="${league.nazwa}"></option>
+                                    </div>
+                                </div>
+                            </select>
+                        </div>
                         <button type="submit" class="btn btn-primary">Submit</button>
                     </form>
                 </div>
