--- a/src/main/resources/templates/team/show_team_view.html
+++ b/src/main/resources/templates/team/show_team_view.html
@@ -44,7 +44,7 @@
                                         <div align="right" >
                                             <a th:href="@{/club/__${Club}__/sections/__${idSection}__/teams/}"><span style="margin-left: 10px" class="glyphicon glyphicon-stats"></span> </a>
                                             <a th:href="@{/club/__${Club}__/sections/__${idSection}__/teams/__${team.idDruzyna}__/players/}"><img style="margin-left: 10px" src="https://cdn4.iconfinder.com/data/icons/sports-vol-3/48/122-20.png"/></a> 
-                                            <a th:href="@{/club/__${Club}__/sections/__${idSection}__/teams/}"><img style="margin-left: 10px" src="https://cdn3.iconfinder.com/data/icons/general-icons-set-1/100/65_member-20.png"/> </a> 
+                                            <a th:href="@{/club/__${Club}__/sections/__${idSection}__/teams/__${team.idDruzyna}__/staffmembers/}"><img style="margin-left: 10px" src="https://cdn3.iconfinder.com/data/icons/general-icons-set-1/100/65_member-20.png"/> </a> 
                                         </div>
                                         <br/>
                                     </div>
