--- a/src/main/resources/templates/boardmember/show_boardmember_view.html
+++ b/src/main/resources/templates/boardmember/show_boardmember_view.html
@@ -49,8 +49,10 @@
                             </div>
                         </div>
                     </div>
+
                 </div>
             </div>
+            <div align="center"> <a th:href="@{/club/__${club}__/}">BACK<span style="margin-left: 10px" class="glyphicon glyphicon-arrow-left"></span> </a> </div>
         </div>
     </body>
 </html>
