--- a/src/main/resources/templates/player/show_concreteplayer_view.html
+++ b/src/main/resources/templates/player/show_concreteplayer_view.html
@@ -58,6 +58,7 @@
                     </div>
                 </div>
             </div>
+            <div align="center"> <a th:href="@{/club/__${Club}__/sections/__${idSection}__/teams/__${Team}__/players/}">BACK<span style="margin-left: 10px" class="glyphicon glyphicon-arrow-left"></span> </a> </div>
         </div>
     </body>
 </html>
