--- a/src/main/resources/templates/staffmember/show_staffmember_view.html
+++ b/src/main/resources/templates/staffmember/show_staffmember_view.html
@@ -49,6 +49,6 @@
                     </div>
                 </div>
             </div>
-        </div>
+            <div align="center"> <a th:href="@{/club/__${club}__/sections/__${idSection}__/teams/}">BACK<span style="margin-left: 10px" class="glyphicon glyphicon-arrow-left"></span> </a> </div> </div>
     </body>
 </html>
