--- a/src/main/resources/templates/team/show_team_view.html
+++ b/src/main/resources/templates/team/show_team_view.html
@@ -53,6 +53,7 @@
                     </div>
                 </div>
             </div>
+            <div align="center"> <a th:href="@{/club/__${Club}__/sections/}">BACK<span style="margin-left: 10px" class="glyphicon glyphicon-arrow-left"></span> </a> </div>
         </div>
     </body>
 </html>
