--- a/src/main/resources/templates/league/show_leagues_view.html
+++ b/src/main/resources/templates/league/show_leagues_view.html
@@ -44,6 +44,7 @@
                     </div>
                 </div>
             </div>
+              <div align="center"> <a th:href="@{/}">BACK<span style="margin-left: 10px" class="glyphicon glyphicon-arrow-left"></span> </a> </div>
         </div>
     </body>
 </html>
