--- a/src/main/resources/templates/player/show_player_view.html
+++ b/src/main/resources/templates/player/show_player_view.html
@@ -55,6 +55,7 @@
                     </div>
                 </div>
             </div>
+            <div align="center"> <a th:href="@{/club/__${Club}__/sections/__${idSection}__/teams/}">BACK<span style="margin-left: 10px" class="glyphicon glyphicon-arrow-left"></span> </a> </div>
         </div>
     </body>
 </html>
