--- a/src/main/resources/templates/section/show_section_view.html
+++ b/src/main/resources/templates/section/show_section_view.html
@@ -43,6 +43,7 @@
                     </ul>
                 </div>
             </div>
+            <div align="center"> <a th:href="@{/club/__${Club}__/}">BACK<span style="margin-left: 10px" class="glyphicon glyphicon-arrow-left"></span> </a> </div>
         </div>
     </body>
 </html>
